Fix dark mode

--- a/themes/custom/assets/css/styles.css
+++ b/themes/custom/assets/css/styles.css
@@ -122,7 +122,7 @@ nav ul, .list-meta, pre {
   margin: 0;
 }
 
-#header-main, #footer-main, article {
+#header-main, article {
   margin-bottom: 1rem;
 }
 
